[package]
name = "demo-lexer"
version = "0.1.0"
authors = ["ouyangchao <ouyangchao@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.4.5"
lazy_static = "1.4.0"
tinytemplate = "1.2.1"
serde = { version = "1.0.125", features = ["derive"] }
